# ics-calendar-mcp

./: .gitignore  README.md  pyproject.toml
src/ics_calendar_mcp/: __init__.py  __main__.py  calendar.py  server.py  utils.py
tests/: __init__.py  test_calendar.py  test_tools.py  test_utils.py
